manifests/kubewall/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubewall
  namespace: kubewall
  annotations:
    cert-manager.io/cluster-issuer: hostfab-dev
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetess.io/ip-whitelist-source-range:  "87.243.107.94/32,"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: auth-kubewall
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required by secops team"
    kubernetess.io/ip-whitelist-source-range:  "87.243.107.94/32,"
  labels:
    app: kubewall
    env: home
spec:
  tls:
  - hosts:
    - kube.hostfabtech.xyz
    secretName: tls-kube-hostfabtech-xyz
  rules:
  - host: kube.hostfabtech.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubewall
            port:
              number: 8443
